--- a/app/src/main/res/layout/fragment_suitcase_selection.xml
+++ b/app/src/main/res/layout/fragment_suitcase_selection.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/PrimaryBlue"
-    tools:context=".SuitcaseSelection">
+    tools:context="com.valairan.Fragments.SuitcaseSelection">
 
 
     <TextView
