--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="ProgressBarStyle">
+        <item name="colorAccent">@color/PureBlack</item>
+    </style>
+
     <style name="Theme.WhatsInMySuitcase.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.WhatsInMySuitcase.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
